# server/internal/web/server.go
@@ -59,10 +59,10 @@ func (s *Server) registerRoutes(r *gin.Engine) {
 	r.POST("/api/v1/accounts", s.accountHandler.HandleCreateAccount())
 
 	r.POST("/api/v1/missions", s.authMware, s.missionHandler.HandleCreateMission())
-	r.GET("/api/v1/missions/", s.authMware, s.missionHandler.HandleGetAccountMissions())
+	r.GET("/api/v1/missions", s.authMware, s.missionHandler.HandleGetAccountMissions())
 	r.GET("/api/v1/missions/:mission_id", s.authMware, s.permViewMware, s.missionHandler.HandleGetMission())
 	r.PATCH("/api/v1/missions/:mission_id", s.authMware, s.permEditMware, s.missionHandler.HandleUpdateMission())
-	r.PATCH("api/v1/missions/:mission_id/visibility", s.authMware, s.permEditMware, s.missionHandler.HandleUpdateMissionVisibility())
+	r.PATCH("/api/v1/missions/:mission_id/visibility", s.authMware, s.permEditMware, s.missionHandler.HandleUpdateMissionVisibility())
 	r.DELETE("/api/v1/missions/:mission_id", s.authMware, s.permDeleteMware, s.missionHandler.HandleDeleteMission())
 	r.GET("/api/v1/missions/:mission_id/stream", s.authMware, s.permViewMware, s.missionHandler.HandleGetMissionStream())
 }
